styles.css
body, p, h2, h5 {
    margin: 0;
    padding: 2px;
}

body {
    font-family: sans-serif;
    display: grid;
    height: 100vh;
    width: 100vw;
    padding: 0;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 130px auto;
}

body > div {
    padding: 15px;
}

.iconLarge {
    width: 30px;
    height: auto;
    margin-right:10px;
}

.icon {
    width: 20px;
    margin-left: 5px;
    margin-right: 10px;
}

.profile {
    width: 40px;
}

.profileLarge {
    width: 50px;
    margin-right: 10px;
}

.sidebar {
    background-color: rgb(2, 105, 169);
    color: white;
    font-weight: bold;
    position: relative;
    grid-area: 1 / 1 / 3 / 1;
    box-shadow: rgba(0, 0, 0, 0.3) 5px 0px 6px -4px;

    display: grid;
    grid-auto-rows: max-content;
    align-items: start;
    gap: 20px;
}

.title {
    display: grid;
    grid-template-columns: auto auto;
    align-items: center;
    justify-content: left;
}

.sideNavigation > ul {
    padding: 0;
    list-style-type: none;
    display: grid;
    gap: 15px;
}

ul > li {
    display: grid;
    grid-template-columns: auto auto;
    align-items: center;
    justify-content: left;
}

.header {
    background-color: white;
    position: relative;
    grid-area: 1 / 2 / 1 / 3;
    box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 6px -4px;
    gap: 10px;
    display: grid;
    grid-template-rows: 1fr 2fr;
}

.topNavigation {
    display: grid;
    grid-template-columns: 35px 15fr auto 35px 35px 1fr 15px;
    gap: 15px;
    align-items: center;
}

.topNavigation > input {
    background-color: lightgray;
    border: none;
    border-radius: 10px;
    min-width: 20%;
    max-width: 60%;
    height: 20px;
    flex-basis: auto;
}

.topNavigation > p {
    font-weight: bold;
    justify-self: left;
}

.controlSection {
    display: grid;
    grid-template-columns: 70px 10fr auto 1fr 1fr 1fr;
}

.Greeting {
   align-self: center;
}

.Greeting > p {
    font-size: smaller;
    font-weight: bold;
}

button {
    background-color: rgb(2, 105, 169);
    color: white;
    border: none;
    border-radius: 15px;
    height: 30px;
    width: 100px;
    margin: 15px;
    align-self: center;

}

.content {
    grid-area: 2 / 2 / 3 / 3;
    background-color: rgb(226, 239, 255);
    align-items: start;

    display: grid;
    grid-template-columns: 3fr 1fr;
}

.cardlist {
    margin-right: 20px;
    display: grid; 
    grid-template-columns: auto auto;
    gap: 15px;
    align-items:start;
}

.card {
    background-color: white;
    padding: 25px 10px 5px 20px;
    border-left: 5px orange solid;
    border-radius: 5px;
    box-shadow: rgba(0, 0, 0, 0.3) 5px 5px 6px -4px;
    height: 120px;

    display: grid;
    gap: 5px;
    align-items: start;
    grid-template-rows: 15px auto 40px;
}

.card > p {
    font-size: smaller;
}

.actionIcons {
    justify-self: right;
}

.metaBar {
    display: grid;
    grid-template-rows: 1fr 1fr;
    align-items: start;
}

.announcementGrid {
    background-color: white;
    border-radius: 5px;
    padding: 20px;
    box-shadow: rgba(0, 0, 0, 0.3) 5px 5px 6px -4px;
    display: grid;
}

.announcementItem > p {
    font-size: smaller;
    color: gray;
}

hr {
    border-style: solid;
    color: lightgray;
    border-width: 1px;
    margin: 15px 0;
}

.trendingGrid {
    background-color: white;
    border-radius: 5px;
    padding: 20px;
    box-shadow: rgba(0, 0, 0, 0.3) 5px 5px 6px -4px;
    display: grid;
    align-items: start;
    gap: 15px;
}

.trendingItem {
    display: grid;
    grid-template-columns: 55px auto;
    grid-template-rows: 1fr 1fr;
    align-items: center;
}

.trendingItem > img {
    grid-area: 1 / 1 / 3 / 2;
}

.trendingItem > p {
    padding: 0;
}

.greyText {
    color: gray;
}

